@@ -1,16 +1,18 @@
 package com.example.pdp_project.service;
 
 import com.example.pdp_project.dto.ModuleDTO;
+import com.example.pdp_project.dto.ModulePostDTO;
+import com.example.pdp_project.entity.Course;
 import com.example.pdp_project.entity.Module;
 import com.example.pdp_project.mapper.ModuleMapper;
+import com.example.pdp_project.repo.CourseRepository;
 import com.example.pdp_project.repo.ModuleRepository;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,53 +20,40 @@ public class ModuleService {
 
     private final ModuleRepository moduleRepository;
     private final ModuleMapper moduleMapper = ModuleMapper.INSTANCE;
+    private final CourseRepository courseRepository;
 
-    public List<Module> getAllModules() {
+    public List<ModuleDTO> getAllModules() {
         List<Module> modules = moduleRepository.findAll();
-//        System.out.println(modules.get(1).getName());
-//        System.out.println(modules.get(1).getCourse());
-//        System.out.println(modules.get(1).getId());
-//        System.out.println(modules.get(1).getLessons());
-//        return modules.stream()
-//                .map(moduleMapper::toModuleMapDto)
-//                .collect(Collectors.toList());
-        return modules;
+        return modules.stream().map(moduleMapper::toModuleMapDto).toList();
+    }
 
+    public List<?> getModulesByCourseId(Integer id) {
+        return moduleMapper.toDtoList(moduleRepository.findAllByCourse_Id(id));
     }
 
     public ModuleDTO getModuleById(Integer id) {
-        Optional<Module> module = moduleRepository.findById(id);
-        return module.map(moduleMapper::toModuleMapDto).orElse(null);
+        return moduleRepository.findById(id).map(moduleMapper::toModuleMapDto).orElse(null);
     }
 
-    public ModuleDTO createModule(ModuleDTO moduleDTO) {
+    public ModuleDTO createModule(@Valid ModulePostDTO moduleDTO) {
         Module module = moduleMapper.toModuleMap(moduleDTO);
-        module = moduleRepository.save(module);
-        return moduleMapper.toModuleMapDto(module);
+        return moduleMapper.toModuleMapDto(moduleRepository.save(module));
     }
 
-    public ModuleDTO updateModule(Integer id, ModuleDTO moduleDTO) {
-        if (moduleRepository.existsById(id)) {
-            Module module = moduleMapper.toModuleMap(moduleDTO);
-            module = moduleRepository.save(module);
-            module.setId(id);
-            return moduleMapper.toModuleMapDto(module);
-        }
-        return null;
+    public ModuleDTO updateModule(ModuleDTO moduleDTO) {
+        Course course = courseRepository.findById(moduleDTO.getCourseId())
+                .orElseThrow(() -> new EntityNotFoundException("Course with ID " + moduleDTO.getCourseId() + " not found"));
+        Module module = moduleRepository.findById(moduleDTO.getId())
+                .orElseThrow(() -> new EntityNotFoundException("Module with ID " + moduleDTO.getId() + " not found"));
+        module.setName(module.getName());
+        module.setCourse(course);
+        return moduleMapper.toModuleMapDto(moduleRepository.save(module));
     }
 
     public void deleteModule(Integer id) {
-        moduleRepository.deleteById(id);
-
-    }
-
-    public List<ModuleDTO> getModulesByCourseId(Integer id) {
-        List<Module> allByCourseId = moduleRepository.findAllByCourse_Id(id);
-        List<ModuleDTO> moduleDTOList=new ArrayList<>();
-        for (Module module : allByCourseId) {
-            ModuleDTO moduleMapDto = moduleMapper.toModuleMapDto(module);
-            moduleDTOList.add(moduleMapDto);
+        if (!moduleRepository.existsById(id)) {
+            throw new EntityNotFoundException("Module with ID " + id + " not found");
         }
-        return moduleDTOList;
+        moduleRepository.deleteById(id);
     }
 }
